[package]
name = "reload-http-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main-http"

[[bin]]
name = "main-signal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "signal"] }
